--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -41,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_delete"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="@id/state_spinner"
         app:layout_constraintBottom_toBottomOf="@id/state_spinner"
         app:layout_constraintEnd_toEndOf="@id/description_edit_text"/>
@@ -75,6 +76,25 @@
         app:layout_constraintStart_toStartOf="@id/description_edit_text"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:visibility="visible"/>
+
+    <TextView
+        android:id="@+id/error_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/task_open_error"
+        android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginEnd="@dimen/margin_default"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:textColor="@color/red"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible"
+        />
 
     <ProgressBar
         android:id="@+id/progress_bar"
