--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -51,7 +51,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="top"
-        android:inputType="textMultiLine"
+        android:inputType="textMultiLine|textCapSentences"
         android:layout_marginTop="@dimen/margin_top_recycler_or_edit_text"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
